// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageComponent should render error when search finished with error 1`] = `
<app-page
  appService={[Function AppService]}
  debounceTime={[Function Number]}
  isFailed={[Function Boolean]}
  numberOfRowsPerPage={[Function Number]}
  pageByManual$={[Function BehaviorSubject]}
  pageByResize$={[Function Observable]}
  pageByScroll$={[Function Observable]}
  pageHeight={[Function Number]}
  pageToLoad$={[Function Observable]}
  rowHeight={[Function Number]}
>
  <app-search-form />
  
  
  <app-search-error />
  
</app-page>
`;

exports[`PageComponent should render only search form by default 1`] = `
<app-page
  appService={[Function AppService]}
  debounceTime={[Function Number]}
  numberOfRowsPerPage={[Function Number]}
  pageByManual$={[Function BehaviorSubject]}
  pageByResize$={[Function Observable]}
  pageByScroll$={[Function Observable]}
  pageHeight={[Function Number]}
  pageToLoad$={[Function Observable]}
  rowHeight={[Function Number]}
>
  <app-search-form />
  
  
  
  
</app-page>
`;

exports[`PageComponent should render search results when there are search results data 1`] = `
<app-page
  appService={[Function AppService]}
  debounceTime={[Function Number]}
  numberOfRowsPerPage={[Function Number]}
  pageByManual$={[Function BehaviorSubject]}
  pageByResize$={[Function Observable]}
  pageByScroll$={[Function Observable]}
  pageHeight={[Function Number]}
  pageToLoad$={[Function Observable]}
  rowHeight={[Function Number]}
  totalCount="0"
>
  <app-search-form />
  
  
  
  
</app-page>
`;

exports[`PageComponent should render spinner when search started 1`] = `
<app-page
  appService={[Function AppService]}
  debounceTime={[Function Number]}
  isLoading={[Function Boolean]}
  numberOfRowsPerPage={[Function Number]}
  pageByManual$={[Function BehaviorSubject]}
  pageByResize$={[Function Observable]}
  pageByScroll$={[Function Observable]}
  pageHeight={[Function Number]}
  pageToLoad$={[Function Observable]}
  rowHeight={[Function Number]}
>
  <app-search-form />
  
  <app-search-spinner />
  
  
</app-page>
`;
